--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.1.0",
+    "config": "^3.3.7",
+    "dotenv": "^16.0.0",
+    "hcaptcha": "^0.1.1",
     "next": "12.0.10",
+    "next-connect": "^0.12.1",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.7",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10"
   }
